[gd_scene load_steps=9 format=3 uid="uid://b2i15mxofu5ee"]

[ext_resource type="Script" uid="uid://cmhn05f0dbb36" path="res://Scenes/door_monster.gd" id="1_o643r"]
[ext_resource type="Texture2D" uid="uid://8qjwsrig52vi" path="res://icon.svg" id="2_eg2ri"]
[ext_resource type="Script" uid="uid://gmd63iao7pnx" path="res://Scenes/state_machine.gd" id="3_qkh2i"]
[ext_resource type="Script" uid="uid://df0j1xk3fvmw1" path="res://Scripts/States/Monster/idle_state.gd" id="4_v25y2"]
[ext_resource type="Script" uid="uid://bkr7tx3dg55v8" path="res://Scripts/States/Monster/ready_state.gd" id="5_o643r"]
[ext_resource type="Script" uid="uid://b8p7avxawncxs" path="res://Scripts/States/Monster/kill_door_state.gd" id="6_o643r"]

[sub_resource type="QuadMesh" id="QuadMesh_o643r"]
size = Vector2(0.6, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eg2ri"]
albedo_color = Color(2.341346, 1.9892012, 0, 1)
albedo_texture = ExtResource("2_eg2ri")
albedo_texture_force_srgb = true

[node name="DoorMonster" type="Node3D"]
script = ExtResource("1_o643r")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96009886, 1.645237, -2.0572872)
mesh = SubResource("QuadMesh_o643r")
surface_material_override/0 = SubResource("StandardMaterial3D_eg2ri")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_qkh2i")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_timer", "mesh", "idle_marker")]
script = ExtResource("4_v25y2")
idle_timer = NodePath("../../IdleTimer")
idle_duration_min = 2.0
idle_duration_max = 3.0
mesh = NodePath("../../Mesh")
idle_marker = NodePath("../../Markers/Doorway")
metadata/_custom_type_script = "uid://df0j1xk3fvmw1"

[node name="Ready" type="Node" parent="StateMachine" node_paths=PackedStringArray("kill_timer")]
script = ExtResource("5_o643r")
kill_timer = NodePath("../../KillTimer")
kill_duration = 4.0
metadata/_custom_type_script = "uid://bkr7tx3dg55v8"

[node name="Kill" type="Node" parent="StateMachine" node_paths=PackedStringArray("mesh", "doorway_maker", "over_player_marker", "wait_at_door_timer")]
script = ExtResource("6_o643r")
mesh = NodePath("../../Mesh")
doorway_maker = NodePath("../../Markers/Doorway")
over_player_marker = NodePath("../../Markers/OverPlayer")
walk_duration = 1.0
shake_head_duration = 1.0
wait_at_door_timer = NodePath("../../WaitAtDoorTimer")
wait_at_door_durtation = 5.0
metadata/_custom_type_script = "uid://b8p7avxawncxs"

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="KillTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleTimer" type="Timer" parent="."]
one_shot = true

[node name="WaitAtDoorTimer" type="Timer" parent="."]
one_shot = true

[node name="Markers" type="Node3D" parent="."]

[node name="Doorway" type="Marker3D" parent="Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.96009886, 1.645237, -2.0572872)

[node name="OverPlayer" type="Marker3D" parent="Markers"]
transform = Transform3D(0.94956785, 0, 0.3135616, 0.072113454, 0.97319496, -0.21838331, -0.30515656, 0.2299818, 0.92411464, 0.4900267, 1.0641277, 0.7408417)

[connection signal="state_entered" from="StateMachine" to="." method="_on_state_machine_state_entered"]
[connection signal="killed_player" from="StateMachine/Kill" to="." method="_on_kill_killed_player"]
[connection signal="killing_player" from="StateMachine/Kill" to="." method="_on_kill_killing_player"]
[connection signal="timeout" from="VisibleTimer" to="." method="_on_visible_timer_timeout"]
